# Linux_project

./: README.md  files.sh  userdef.sh
ERCEA/: client  client.c  server  server.c
project/Application/: .Makefile.swp  Makefile  output
project/Modules/caesar_cipher/: caesar_cipher.mk
project/Modules/xor_cipher/: xor_cipher.mk
projectCmake/Application/: CMakeLists.txt  output
projectCmake/Modules/caesar_cipher/: CMakeLists.txt
projectCmake/Modules/xor_cipher/: CMakeLists.txt
